# turnstone

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  HYPOTHESIS.md  LICENSE  NOTICE  PRIMER.md  PROGRESS.md  QUICKSTART.md  README.md  THIRD-PARTY-NOTICES  compose.yaml  eval_skill_adherence.json  lint_hypothesis.py  pyproject.toml  run.sh  tests.json  turnstone.example.toml
.github/: FUNDING.yml  renovate.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docker-publish.yml  docker-scan.yml  publish.yml  understone-example.yml  vendor-js.yml
deploy/: Caddyfile  docker-compose.tls.yml
deploy/openshell/: routes.yaml  turnstone-policy.yaml
deploy/systemd/: README.agent  README.md  config.example.toml  turnstone-channel.service  turnstone-console.service  turnstone-server.service  turnstone.slice  turnstone.target  turnstone.tmpfiles.conf
docker/: entrypoint.sh  healthcheck.py  mcp-ddg.json
docs/: api-reference.md  architecture.md  bulk-endpoints.md  channels.md  console.md  coordinator-api-tour.md  coordinator-skills.md  docker.md  eval.md  governance.md  judge.md  mcp-oauth.md  mcp-registry.md  memory.md  oidc.md  openshell.md  personas.md  pgbouncer.md  releasing.md  sdk.md  security.md  settings.md  simulator.md  tls.md  tools.md
docs/design/: consistent-hash-ring.md  inline-child-approvals.md
docs/diagrams/: 01-system-context.puml  02-package-structure.puml  03-core-engine-classes.puml  04-conversation-turn.puml  05-tool-pipeline.puml  06-mq-protocol.puml  07-message-routing.puml  08-redis-key-schema.puml  09-workstream-states.puml  10-simulator-architecture.puml  11-console-data-flow.puml  12-deployment.puml  13-sdk-architecture.puml  14-storage-architecture.puml  15-auth-architecture.puml  16-channel-architecture.puml  17-notify-flow.puml  18-watch-architecture.puml  19-governance-architecture.puml  20-mcp-architecture.puml  21-ws-template-architecture.puml  22-judge-architecture.puml  23-memory-architecture.puml  24-settings-architecture.puml  25-oidc-architecture.puml  26-skills-discovery-architecture.puml
docs/operations/: mcp-oauth-headless.md
examples/door-game/: .gitignore  README.md  pyproject.toml
examples/door-game/tests/: conftest.py  test_cli.py  test_combat.py  test_descend.py  test_game.py  test_leveling.py  test_mcp_integration.py  test_movement.py  test_package.py  test_persistence.py  test_rng.py  test_satchel.py  test_screen.py  test_sim.py  test_social.py  test_texture.py  test_textwidth.py  test_turns.py  test_watch.py  test_watch_theme.py  test_world_loader.py  test_worlds.py  test_wyrm.py
examples/door-game/tests/golden/: menu_inn.txt  viewport_edge_nw.txt  viewport_spawn.txt
examples/door-game/understone/: __init__.py  __main__.py  cli.py  errors.py  game.py  persistence.py  server.py  sim.py  watch.py
examples/door-game/understone/engine/: __init__.py  combat.py  leveling.py  log.py  models.py  movement.py  rank.py  rng.py  satchel.py  textwidth.py  turns.py  world.py
examples/door-game/understone/screen/: __init__.py  box.py  grid.py  menus.py  palette.py  text_renderer.py  texture.py  viewport.py
examples/door-game/understone/world/: __init__.py  loader.py
examples/door-game/understone/world/data/: events.json  items.json  locations.json  monsters.json  terrain.json  world.json
examples/door-game/understone/world/packs/: README.md
examples/door-game/understone/world/packs/cinder-wastes/: events.json  items.json  locations.json  monsters.json  terrain.json  world.json
examples/mcp-cluster-ops/: README.md  pyproject.toml
examples/mcp-cluster-ops/mcp_cluster_ops/: __init__.py  __main__.py  server.py
examples/mcp-cluster-ops/tests/: test_helpers.py  test_tools.py
scripts/: bench_bm25_rerank.py  css_specificity_audit.py  livepass.py  recovery_e2e.py  release.sh  update-vendored-js.sh
scripts/obo-e2e/: .env.example  README.md  entra_e2e.py  entra_setup.sh  entra_spike.py  keycloak_e2e.py  keycloak_e2e.sh
sdk/typescript/: openapi-console.json  openapi-server.json  package-lock.json  package.json  tsconfig.json
tests/: _coord_test_helpers.py  _helpers.py  _proc_helpers.py  _replay_helpers.py  _session_helpers.py  _sse_recovery_helpers.py  _sse_recovery_server.py  _wire_capture.py  conftest.py  spike_sdk_concurrency.py  test_admin_calibrate_endpoint.py  test_admin_create_admin.py  test_admin_db_config.py  test_admin_export.py  test_admin_model_registry_refresh.py  test_admin_rerank_calibrate.py  test_api_versioning.py  test_app_js.py  test_async_broker.py  test_attachment_buffer.py  test_attachments_pdf_audio.py  test_audio.py  test_audit.py  test_auth.py  test_auth_identity.py  test_auth_oidc.py  test_background_shells.py  test_bash_background_tool.py  test_bash_tool_background_hang.py  test_bm25.py  test_bootstrap.py  test_bridge_events.py  test_bridge_stress.py  test_build_history_reminders.py  test_cancel.py  test_canonicalize_skill_string_list.py  test_channel_discord.py  test_channel_protocol.py  test_channel_routing.py  test_channel_slack.py  (+295 more)
turnstone/: __init__.py  admin.py  bootstrap.py  chat.py  cli.py  doctor.py  eval.py  optimizer.py  server.py
turnstone/api/: console_schemas.py  console_spec.py  docs.py  openapi.py  schemas.py  server_schemas.py  server_spec.py
turnstone/channels/: __init__.py  _config.py  _formatter.py  _http.py  _protocol.py  _routing.py  _sse.py  cli.py
turnstone/console/: __init__.py  collector.py  coordinator.py  coordinator_adapter.py  coordinator_alias.py  coordinator_client.py  coordinator_idle_observer.py  coordinator_ui.py  metrics.py  notify_dispatcher.py  rebalancer.py  router.py  scheduler.py  server.py  session_factory.py  tls.py
turnstone/core/: _judge_common.py  _mcp_backoff.py  attachment_buffer.py  attachments.py  audio.py  audit.py  auth.py  auth_oidc.py  background_shells.py  bm25.py  child_event_bus.py  child_source.py  children_registry.py  compaction_render.py  config.py  config_store.py  deadline.py  edit.py  env.py  export.py  log.py  (+67 more)
(+358 files in other folders)
